--- a/AAP.csproj
+++ b/AAP.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <IncludeSymbols>False</IncludeSymbols>
+    <StartupObject>AAP.MainProgram</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
