--- a/AAP.csproj
+++ b/AAP.csproj
@@ -8,7 +8,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <IncludeSymbols>False</IncludeSymbols>
     <StartupObject>AAP.MainProgram</StartupObject>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Icon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
