--- a/AAP.csproj
+++ b/AAP.csproj
@@ -22,9 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Forms\AAPLoadingForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="Forms\AAPLoadingForm.cs" />
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
