Port to WPF from WinForms

--- a/AAP.csproj
+++ b/AAP.csproj
@@ -1,15 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <IncludeSymbols>False</IncludeSymbols>
-    <StartupObject>AAP.MainProgram</StartupObject>
+    <StartupObject>AAP.App</StartupObject>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
     <Company>$(Kygira5)</Company>
+    <UseWPF>True</UseWPF>
+    <Configurations>Debug;Release;WPF Debug;WPF Release</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
