--- a/AAP.csproj
+++ b/AAP.csproj
@@ -19,6 +19,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="WPF Windows\SplashScreen1.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Icon.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -26,6 +30,10 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <SplashScreen Include="WPF Windows\SplashScreen1.png" />
   </ItemGroup>
 
   <ItemGroup>
