--- a/AAP.csproj
+++ b/AAP.csproj
@@ -19,6 +19,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ApplicationDefinition Remove="App.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Resources\DestroyLayerIcon.png" />
     <None Remove="Resources\DrawToolIcon.png" />
     <None Remove="Resources\DuplicateLayerIcon.png" />
@@ -40,6 +44,10 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Include="App.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -100,13 +108,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="PresetCharacterPalettes\Main ASCII Characters.txt">
+    <None Update="Resources\PresetCharacterPalettes\Main ASCII Characters.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="PresetCharacterPalettes\Alphabet.txt">
+    <None Update="Resources\PresetCharacterPalettes\Alphabet.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="PresetCharacterPalettes\Numbers.txt">
+    <None Update="Resources\PresetCharacterPalettes\Numbers.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Properties\Settings.settings">
