--- a/AAP.csproj
+++ b/AAP.csproj
@@ -32,6 +32,7 @@
     <None Remove="Resources\DuplicateLayerIcon.png" />
     <None Remove="Resources\EraserToolIcon.png" />
     <None Remove="Resources\highlightbox.png" />
+    <None Remove="Resources\Images\ToolIcons\LineToolIcon.png" />
     <None Remove="Resources\MoveLayerDownIcon.png" />
     <None Remove="Resources\MoveLayerUpIcon.png" />
     <None Remove="Resources\MoveToolIcon.png" />
@@ -79,6 +80,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\ToolIcons\EraserToolIcon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\ToolIcons\LineToolIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Images\ToolIcons\MoveToolIcon.png">
