--- a/AAP.csproj
+++ b/AAP.csproj
@@ -61,9 +61,9 @@
     <None Remove="Resources\MoveLayerUpIcon.png" />
     <None Remove="Resources\MoveToolIcon.png" />
     <None Remove="Resources\NewLayerIcon.png" />
-    <None Remove="Resources\PresetCharacterPalettes\6-dot braille.txt" />
-    <None Remove="Resources\PresetCharacterPalettes\8-dot braille.txt" />
     <None Remove="Resources\PresetCharacterPalettes\Alphabet.txt" />
+    <None Remove="Resources\PresetCharacterPalettes\Braille with 6-dots.txt" />
+    <None Remove="Resources\PresetCharacterPalettes\Braille with 8-dots.txt" />
     <None Remove="Resources\PresetCharacterPalettes\Main ASCII Characters.txt" />
     <None Remove="Resources\PresetCharacterPalettes\Numbers.txt" />
     <None Remove="Resources\PresetCharacterPalettes\Shapes.txt" />
@@ -92,10 +92,10 @@
     <Content Include="Resources\Images\ProgramIcons\Icon_old.ico">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\PresetCharacterPalettes\8-dot braille.txt">
+    <Content Include="Resources\PresetCharacterPalettes\Braille with 8-dots.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\PresetCharacterPalettes\6-dot braille.txt">
+    <Content Include="Resources\PresetCharacterPalettes\Braille with 6-dots.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\PresetCharacterPalettes\Main ASCII Characters.txt">
