--- a/AAP.csproj
+++ b/AAP.csproj
@@ -68,9 +68,9 @@
     <None Remove="Resources\MoveToolIcon.png" />
     <None Remove="Resources\NewLayerIcon.png" />
     <None Remove="Resources\PresetCharacterPalettes\Alphabet.txt" />
-    <None Remove="Resources\PresetCharacterPalettes\Braille with 6-dots.txt" />
-    <None Remove="Resources\PresetCharacterPalettes\Braille with 8-dots.txt" />
-    <None Remove="Resources\PresetCharacterPalettes\Main ASCII Characters.txt" />
+    <None Remove="Resources\PresetCharacterPalettes\Braille6.txt" />
+    <None Remove="Resources\PresetCharacterPalettes\Braille8.txt" />
+    <None Remove="Resources\PresetCharacterPalettes\Main.txt" />
     <None Remove="Resources\PresetCharacterPalettes\Numbers.txt" />
     <None Remove="Resources\PresetCharacterPalettes\Shapes.txt" />
     <None Remove="Resources\SelectToolIcon.png" />
@@ -98,13 +98,13 @@
     <Content Include="Resources\Images\ProgramIcons\Icon_old.ico">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\PresetCharacterPalettes\Braille with 8-dots.txt">
+    <Content Include="Resources\PresetCharacterPalettes\Braille8.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\PresetCharacterPalettes\Braille with 6-dots.txt">
+    <Content Include="Resources\PresetCharacterPalettes\Braille6.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\PresetCharacterPalettes\Main ASCII Characters.txt">
+    <Content Include="Resources\PresetCharacterPalettes\Main.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\PresetCharacterPalettes\Numbers.txt">
