--- a/AAP.csproj
+++ b/AAP.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
 	<UseWindowsForms>False</UseWindowsForms>
@@ -14,7 +14,7 @@
     <FileVersion>$(AssemblyVersion)</FileVersion>
     <AssemblyVersion>1.0.0</AssemblyVersion>
     <NeutralLanguage>en</NeutralLanguage>
-    <Version>$(AssemblyVersion)-beta</Version>
+    <Version>$(AssemblyVersion)</Version>
     <AssemblyName>ASCII Art Program</AssemblyName>
     <Title>ASCII Art Program</Title>
     <Description>A program used to create ASCII Art!</Description>
